# velum

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
assets/branding/: README.md
src/velum/: __init__.py  __main__.py  cli.py  server.py
src/velum/_vendor/: __init__.py
src/velum/_vendor/opf/: __init__.py  _api.py
src/velum/_vendor/opf/_common/: __init__.py  checkpoint_download.py  constants.py  env.py  label_space.py  terminal_colors.py
src/velum/_vendor/opf/_core/: __init__.py  decoding.py  runtime.py  sequence_labeling.py  spans.py
src/velum/_vendor/opf/_model/: __init__.py  model.py  triton_moe.py  weights.py
src/velum/backend/: __init__.py  app.py  routes.py  schemas.py
src/velum/core/: __init__.py  config.py
src/velum/engine/: __init__.py  base.py  opf_redactor.py  regex_backstop.py  registry.py  span_utils.py
src/velum/frontend/: __init__.py  app.py
tests/: conftest.py  test_backend.py  test_cli.py  test_config.py  test_engine.py  test_integration.py  test_opf_redactor.py  test_regex_backstop.py  test_registry.py  test_server.py  test_span_utils.py
